--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="main-screen hide">
               <div class="screen__header">
                 <span class="poke-name"></span>
-                <span class="poke-id"></span>
+                <span class="poke-id">654646</span>
               </div>
               <div class="screen__image">
                 <img src="" class="poke-front-image" alt="front">
